--- a/resources/sass/backend/partials/general.scss
+++ b/resources/sass/backend/partials/general.scss
@@ -65,7 +65,7 @@ main{
             }
 
             & .spec-box{
-                padding: 3px;
+                padding: 15px;
                 max-height: 260px;
                 overflow: auto;
             }
